--- a/devicebackup/ansible-miktorik.yml
+++ b/devicebackup/ansible-miktorik.yml
@@ -1,8 +1,8 @@
 ---
 # ansible-playbook -i hosts test.yml 
 # https://docs.ansible.com/ansible/latest/collections/cisco/ios/ios_command_module.html
-- name: ansible-cisco
-  hosts: sandbox-iosxe #all
+- name: ansible-mikrotik
+  hosts: mikrotik #all
   # become: yes
   gather_facts: no
 #
@@ -19,4 +19,4 @@
 #ansible_become_pass: "{{ default_become_pass }}"
 
   roles:
-    - role: ansible-cisco-playbook
+    - role: mikrotik
